# clspack

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ruff.yml  tests.yml
src/clspack/: __init__.py  utils.py
tests/: external.py  test.py  test_pack.py
