[project]
name = "clspack"
version = "0.0.1"
authors = [
  { name="hafedh hichri", email="hhichri60@gmail.com" },
]
description = "clspack is a python library that packagizes python classes"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/not-lain/clspack"
Issues = "https://github.com/not-lain/clspack/issues"